# IPC_CTFAgent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eg.py  pyproject.toml
.github/workflows/: ci.yml
backend/: cli.py  filename_util.py
backend/api/: config.py  deps.py  graph.py  logs.py  memory.py  project.py  solve.py  wp.py
backend/blackboard/: db.py  edge_store.py  graph_store.py  ids.py  models.py  node_store.py
backend/config/: config.example.yml  limits.yaml  models.yaml
backend/core/: config.py  diamond.py  difficulty.py  ipc.py  lifecycle.py  logging_util.py  memory_writer.py  orchestrator.py  project_manager.py  replay.py  resource_manager.py  state.py  wp_writer.py
backend/mcp/: antsword.py  base.py  shared.py
backend/members/: adapters.py  base_member.py  factory.py  mock_adapter.py
backend/memory/: memory_mcp.py  memory_search.py  memory_store.py
backend/sandbox/: container_pool.py  docker_manager.py  network_manager.py  resource_limiter.py  sandbox.py  webui_proxy.py
backend/server/: app.py
backend/tools/: member_tools.txt  tool_inventory.py  tool_mcp.py  tool_registry.py
data/: graph.db  memory.db  tool_cache.db
docker/browser/: Dockerfile
docker/ghidra/: Dockerfile
docker/member/: Dockerfile
docs/: Example.md
scripts/: standalone_solve.py
tests/: helpers.py  test_api.py  test_blackboard.py  test_config.py  test_docker_compose.py  test_frontend.py  test_logging_util.py  test_members.py  test_memory.py  test_orchestration.py  test_sandbox.py  test_tools_mcp.py  test_wp_writer.py
(+11 files in other folders)
