[project]
name = "ipc-ctfagent"
version = "0.1.0"
description = "IPC_CTFAgent"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
ipc = "backend.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"backend" = ["config/prompts/*.md", "config/*.yaml", "server/static/*", "server/static/vendor/*", "tools/registry/*.yaml", "tools/member_tools.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
